# Aeris_Senior_Project

./: README.md  kill_sim.sh  package.xml  run_sim_2.sh
3d_assets/: ambulance.dae  ambulance.sdf  blue_car.dae  blue_car.sdf  green_car.dae  green_car.sdf  purple_car.dae  purple_car.sdf  red_car.sdf
apf_planner/: setup.py
apf_planner/apf_planner/: apf_gui.py  apf_node.py
bridges/: emv_pipeline.py  sumo_gz_bridge.py
crossroad/calibration/: crossroad_calib.yaml
crossroad/sumo_files/: ambulance.rou.xml  ambulance.rou.xml.bak  crossroad.net.xml  crossroad.net.xml.bak  crossroad.poly.xml  crossroad.rou.xml  crossroad.sumocfg  crossroad_world.sdf  scale_net_speeds.py  sumo_net_to_gazebo.py  sumo_viewer.py  sumo_world_builder.py  traffic.rou.xml
crossroad/sumo_files/crossroad_road/: model.config  model.sdf
crossroad/sumo_files/crossroad_road/meshes/: road.mtl
straight_road/3d_models/blender/: road2_blend_shrt.blend  road2_blend_shrt.blend1
straight_road/3d_models/blender/Downloads/: worn_asphalt_2k.blend
straight_road/3d_models/blender/Downloads/textures/: worn_asphalt_rough_2k.exr
straight_road/calibration/: straight_road_calib.yaml
straight_road/sumo_files/: straight_road.net.xml  straight_road.rou.xml  straight_road.sumocfg
