<?xml version="1.0"?>
<package format="3">
  <name>apf_planner</name>
  <version>0.1.0</version>
  <description>Artificial Potential Field obstacle avoidance for PX4 + ROS2 Humble</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
